--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,9 @@ body {
     background-color: #f44336;
     color: white;
 }
+
+.task-card {
+    border-radius: 10px;
+    padding: 10px;
+    background: #dcdcdc;
+}
